--- a/security.html
+++ b/security.html
@@ -55,11 +55,11 @@
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -103,7 +103,7 @@
 <p><span class="badge badge-light">Omaha, NE</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SkynetSecureSolutions/743999679505619-it-security-analyst'>Skynet Secure Solutions IT Security Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SkynetSecureSolutions/743999679505619-it-security-analyst'>Skynet Secure Solutions IT Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -139,7 +139,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
+<h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -223,7 +223,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ohHZafwR&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nKZylMwT'>Tenable Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ohHZafwR&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nKZylMwT'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -231,7 +231,7 @@
 <p><span class="badge badge-light">Minnesota, Minneapolis  Minneapolis</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
+<h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -336,7 +336,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/truveris/e909388a-64d2-4f32-9d18-65766c749a59'>Truveris - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/truveris/e909388a-64d2-4f32-9d18-65766c749a59'>Truveris - Security Engineer</a></h5> 
 <p><span class="badge badge-light">New York City Boston</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -432,7 +432,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/recursionpharmaceuticals/jobs/1930015'>Job Application for Cyber Security Threat Analyst at Recursion Pharmaceuticals</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/recursionpharmaceuticals/jobs/1930015'>Job Application for Cyber Security Threat Analyst at Recursion Pharmaceuticals</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
